# ComfyUI-FLOAT_Optimized

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  float_workflow.json  generate.py  nodes.py  nodes_adv.py  nodes_audio.py  nodes_vadv.py  nodes_vadv_loader.py  pyproject.toml  requirements.txt  resample.py
.github/workflows/: publish_comfy_registry_action.yml
assets/: README.md
doc/: .gitignore  NETWORKS.html  NETWORKS.md  decoder.md  encoder.md  nodes_adv.md  nodes_vadv.md  understanding_FLOAT.md
example_workflows/: float_adv.json  float_adv_no_comments.json  float_va_dynamic_emo.json  float_very_advanced.json  float_very_advanced_no_comments.json  float_very_advanced_no_comments_experiment_we.json  float_very_advanced_sub_insert.json  float_very_advanced_sub_insert_2.json  float_very_advanced_subgraphs.json  float_workflow.json  float_workflow_quick.json
model_configs/emotion_ser/: config.json  preprocessor_config.json
models/: basemodel.py  misc.py  wav2vec2.py  wav2vec2_ser.py
models/float/: FLOAT.py  FMT.py  encoder.py  generator.py  styledecoder.py
options/: base_options.py
src/nodes/: __init__.py  generate.py  nodes.py  nodes_adv.py  nodes_vadv.py  nodes_vadv_loader.py  resample.py
src/nodes/model_configs/wav2vec2_base/: config.json
src/nodes/models/: basemodel.py  wav2vec2.py  wav2vec2_ser.py
src/nodes/models/float/: FLOAT.py  FMT.py  encoder.py  styledecoder.py
src/nodes/options/: base_options.py
src/nodes/utils/: downloader.py  image.py
tools/: extract_fmt_weights.py  extract_motion_ae_parts.py  extract_projections.py  extract_wav2vec_parts.py  save_combined_tool.py  show_py_files.sh  style_fixer.py
utils/: downloader.py  logger.py  misc.py  torch.py
